more testing of mongodb

--- a/tutorials/Fireworks - quickstart.ipynb
+++ b/tutorials/Fireworks - quickstart.ipynb
@@ -12,6 +12,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "australian-firewall",
+   "metadata": {},
+   "source": [
+    "Testing mongodb connection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "referenced-routine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "client = pymongo.MongoClient(\n",
+    "    host='mongo',\n",
+    "    username='',\n",
+    "    password='',\n",
+    "    authSource='admin'\n",
+    ")\n",
+    "client.list_database_names()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "gorgeous-curve",
    "metadata": {},
    "source": [
@@ -31,6 +56,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "increasing-context",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat my_launchpad.yaml"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "white-owner",
    "metadata": {},
@@ -47,17 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "# !lpad reset "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "increasing-context",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat my_launchpad.yaml"
+    "! echo 'y' | lpad reset"
    ]
   },
   {
