--- a/tutorials/Fireworks - quickstart.ipynb
+++ b/tutorials/Fireworks - quickstart.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat my_launchpad.yaml"
+    "!cat ~/.fireworks/my_launchpad.yaml"
    ]
   },
   {
@@ -201,27 +201,8 @@
    "metadata": {},
    "source": [
     "## Launch the web GUI\n",
-    "If you have a web browser, you can launch the web GUI to see your results:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "anticipated-patrol",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !lpad webgui"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "civic-sauce",
-   "metadata": {},
-   "source": [
-    "Note that there are options to run the web site in a server mode, try lpad webgui -h to see all the options.\n",
     "\n",
-    "open: http://localhost:8888/proxy/5000"
+    "open: http://localhost:8888/fireworks\n"
    ]
   },
   {
@@ -311,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
